Task instance Java/70